# ChangeLog for net-im/gossip
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/ChangeLog,v 1.19 2004/09/03 21:39:17 slarti Exp $

  03 Sep 2004; Tom Martin <slarti@gentoo.org> gossip-0.7.8.ebuild:
  Marked ~amd64, resolves bug 58323. Thanks to Joe Seeder <seeder@pf.pl> for
  reporting.

*gossip-0.7.8 (03 Sep 2004)

  03 Sep 2004; <spider@gentoo.org> +gossip-0.7.8.ebuild:
  New version, new dependencies. Lost ~sparc along the way due to
  desktop-file-utils dependency.

  03 Sep 2004; <spider@gentoo.org> gossip-0.7.6.ebuild:
  stable on x86

*gossip-0.7.6-r1 02 Sep 2004

  02 Sep 2004; Spider <spider@gentoo.org> 
  # INSERT ENTRY HERE

*gossip-0.7.6 (12 Aug 2004)

  12 Aug 2004; Tom Martin <slarti@gentoo.org> gossip-0.7.6.ebuild:
  Marked ~amd64. Resolves bug 58273. Thanks to Joe Seeder <seeder@pf.lj> for
  reporting.

*gossip-0.7.5 (21 May 2004)

  21 May 2004; Yi Qiang <khai@gentoo.org> +gossip-0.7.5.ebuild:
  Version bump

  21 May 2004; Yi Qiang <khai@gentoo.org> gossip-0.6-r1.ebuild,
  gossip-0.6.ebuild, gossip-0.7.2.ebuild, gossip-0.7.4.ebuild:
  Fixed HOMEPAGE 

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> gossip-0.6-r1.ebuild:
  Add inherit eutils

  09 Apr 2004; David Holm <dholm@gentoo.org> gossip-0.7.4.ebuild:
  Added to ~ppc.

*gossip-0.7.4 (07 Apr 2004)

  07 Apr 2004; foser <foser@gentoo.org> gossip-0.7.4.ebuild :
  New release (#46717)

  29 Feb 2004; Jason Wever <weeve@gentoo.org> gossip-0.7.2.ebuild:
  It's been a hard day's night, and I've been ~sparc'in like a dog.

*gossip-0.7.2 (11 Feb 2004)

  11 Feb 2004; foser <foser@gentoo.org> gossip-0.7.2.ebuild :
  New release (#41199)
  Fix intltool dep cause of parser issues
  Disable experimental dbus interface by default

*gossip-0.7.1-r1 (06 Feb 2004)

  06 Feb 2004; <spider@gentoo.org> gossip-0.7.1-r1.ebuild:
  revisionbump with a hard dep on the new loudmouth, so things dont break if