@@ -1,27 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 049715126df05eb8a602b170a6fa0727 gossip-0.7.6.ebuild 824
 MD5 f16eaa77dd21adb282fffa5c97c20c17 gossip-0.7.8.ebuild 890
-MD5 5556be5dae1a11d4b7be83b215408743 gossip-0.7.5.ebuild 827
 MD5 d643c85e09c08fca9c864113abb3e95a gossip-0.7.2.ebuild 826
-MD5 76d37cf0bb6cfe914d847ec57f60244e gossip-0.6.ebuild 765
+MD5 1b99278dd8b818004555cb10af7354f1 ChangeLog 3301
 MD5 d85225deca2fd75a13f8bad0effdf471 gossip-0.7.4.ebuild 827
-MD5 91b95fd10b39f804f02c370586144f9e gossip-0.6-r1.ebuild 812
-MD5 2bcf25b56b6ef16b7a429e0db5cb8d2f ChangeLog 3190
+MD5 9629b65413873bf3701936c9601cfc82 gossip-0.7.6.ebuild 850
 MD5 9a9ed8f43621c860f0323fcd365a2dbf metadata.xml 271
-MD5 74c6a4b33f5bf9b5392c0f604cdbf55b files/digest-gossip-0.6-r1 63
-MD5 74c6a4b33f5bf9b5392c0f604cdbf55b files/digest-gossip-0.6 63
-MD5 026b4965e022a1121bb4ea0aa7e62335 files/digest-gossip-0.7.2 65
-MD5 380ba273ba985435cd49ab18d2b22382 files/digest-gossip-0.7.4 65
+MD5 76d37cf0bb6cfe914d847ec57f60244e gossip-0.6.ebuild 765
+MD5 91b95fd10b39f804f02c370586144f9e gossip-0.6-r1.ebuild 812
+MD5 5556be5dae1a11d4b7be83b215408743 gossip-0.7.5.ebuild 827
 MD5 0782faadd1504569029f8345f5d430a3 files/digest-gossip-0.7.5 65
 MD5 4050efbfb3d0d651099c4786b55eed9d files/digest-gossip-0.7.6 65
+MD5 74c6a4b33f5bf9b5392c0f604cdbf55b files/digest-gossip-0.6 63
+MD5 380ba273ba985435cd49ab18d2b22382 files/digest-gossip-0.7.4 65
+MD5 026b4965e022a1121bb4ea0aa7e62335 files/digest-gossip-0.7.2 65
 MD5 8306015f92ba6d545883f19eaf3baa4d files/digest-gossip-0.7.8 65
+MD5 74c6a4b33f5bf9b5392c0f604cdbf55b files/digest-gossip-0.6-r1 63
 MD5 c54dc353178590bded70cd6152c7cdc4 files/gossip-0.6-click.patch 659
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.2.6 (GNU/Linux)
+Version: GnuPG v1.2.4 (GNU/Linux)
 
-iD8DBQFBOOTBCHk4+ZoBpvsRAhkUAJ9s91/cpkq9ntJTtoFTOSEfI9nmzwCgmGmo
-ZN7R8GIOd+GhfjkgzPPKKpc=
-=Y2R/
+iD8DBQFBZG14wDHaUUJ0mYMRAo4yAJ916ZdLCLkUw1icx7AgsZ+lMsnLEQCfef2w
+ShUVrP1rqxcOYM3Et7ONGsU=
+=YJYK
 -----END PGP SIGNATURE-----
