@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gossip
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/ChangeLog,v 1.19 2004/09/03 21:39:17 slarti Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/ChangeLog,v 1.20 2004/10/06 22:13:22 tester Exp $
+
+  06 Oct 2004; Olivier Crete <tester@gentoo.org> gossip-0.7.6.ebuild:
+  Fix incorrect gtk/glib/gnome-vfs deps
 
   03 Sep 2004; Tom Martin <slarti@gentoo.org> gossip-0.7.8.ebuild:
   Marked ~amd64, resolves bug 58323. Thanks to Joe Seeder <seeder@pf.pl> for
